--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
+    "webpack": "node build/dev-server.js",
     "start": "npm run dev",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
@@ -20,9 +21,11 @@
     "uikit": "^3.0.0-beta.30",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
-    "vuefire": "^1.4.4"
+    "vuefire": "^1.4.4",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
+    "formidable": "^1.1.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -33,6 +36,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
+    "chai-jasmine": "^1.0.7",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
@@ -50,18 +54,26 @@
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "gitbook-cli": "^2.3.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "jsdom": "^11.3.0",
     "karma": "^1.4.1",
+    "karma-blisk-launcher": "^1.0.0",
+    "karma-brave-launcher": "^1.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jsdom-launcher": "^6.1.2",
     "karma-mocha": "^1.3.0",
+    "karma-opera-launcher": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
@@ -81,11 +93,11 @@
     "standard": "^10.0.3",
     "style-loader": "^0.19.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
+    "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vue-test-utils": "^1.0.0-beta.1",
-    "webpack": "^2.6.1",
+    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
