--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,22 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
+  "configurations": [
+    {
+      "type": "nwjs",
+      "request": "launch",
+      "name": "Launch NWjs",
+      "nwjsVersion": "any",
+      "webRoot": "${workspaceRoot}"
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "http://localhost:8080",
+      "webRoot": "${workspaceRoot}"
+    },
+    {
       "type": "node",
       "request": "launch",
       "name": "server",
@@ -13,9 +28,21 @@
       "type": "chrome",
       "request": "launch",
       "name": "client",
+      "runtimeExecutable": "${workspaceRoot}/node_modules/nw/bin/nw",
+      "runtimeArgs": [
+        "--remote-debugging-port=9222"
+      ],
+      "cwd": "${workspaceRoot}",
       "url": "http://localhost:8080",
       "webRoot": "${workspaceRoot}",
       "sourceMaps": true
+    },
+    {
+      "type": "chrome",
+      "request": "attach",
+      "name": "Attach to Chrome",
+      "port": 9222,
+      "webRoot": "${workspaceRoot}"
     }
   ]
 }
